--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,4 +1,4 @@
-name: claw
+name: Claw
 version: '${project.version}'
 main: com.summit.claw.claw.Claw
 api-version: '1.20'
@@ -6,6 +6,13 @@ authors: [ StakeTheSteak ]
 description: C.L.A.W. (Collect, Locate, Annihilate, Win)
 website: https://summitmc.xyz/
 commands:
-  claw:
-    description: Root command
-    usage: /<command>
+  open:
+    description: Opens the menu GUI for C.L.A.W.
+    Usage: /[claw] <command>
+    permission-message: You do not have permission to use the /claw open command.
+    permission: claw.claw.gui
+  generate:
+    description: Generates a challenge for the current in game day
+    Usage: /[claw] <command>
+    permission-message: You do not have permission to use the /claw generate command.
+    permission: claw.claw.generate
