--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>com.summit.claw</groupId>
     <artifactId>claw</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-BETA</version>
     <packaging>jar</packaging>
 
-    <name>claw</name>
+    <name>Claw</name>
 
     <properties>
         <java.version>1.8</java.version>
